# autonomath-mcp

./: .agent.md  .bandit.yaml  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .windsurfrules  .yamllint.yaml  AGENTS.md  AUTONOMATH_DB_MANIFEST.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY.md  Dockerfile  HANDOFF_2026-04-25.md  JPCITE_SETUP.md  LAUNCH_CONVERGENCE_2026-05-06.md  MASTER_PLAN_v1.md  Makefile  README.md  SECURITY.md  cloudflare-rules.yaml  docs-requirements.txt  entrypoint.sh  fly.jpcite.toml  fly.toml  mcp-server.composition.json  mcp-server.core.json  mcp-server.full.json  mcp-server.json  mkdocs.yml  pyproject.toml  server.json  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
analysis_wave18/: exec_log_I8_cookbook_2026-05-04.md  exec_log_followup_A7_structured_deprecate_2026-05-04.md
analytics/: brand_community_dashboard.json  cf_pages_404_w41.jsonl  cf_pages_audit_w41.json  citation_bench_production_w41_placeholder.jsonl  npm_daily.jsonl  organic_funnel_daily.jsonl  registry_status_w22.json  registry_status_w23.json  registry_status_w28.json  registry_status_w41.json  registry_status_w43_5.json
badges/: README.md
benchmarks/: README.md
data/: bench_api_report.json  brand_self_accounts.json  business_law_forbidden_phrases.json  copilot_hosts.json  duplicate_review_decisions_2026_04_26.jsonl  duplicate_review_queue.jsonl  etl_dd2_municipality_manifest_2026_05_17.json  etl_dd2_narrow_200_city_manifest_2026_05_17.json  etl_g1_nta_manifest_2026_05_17.json  etl_g2_manifest_2026_05_17.json  evolution_thresholds.yml  facts_registry.json  federated_mcp_partners.yaml  federated_partners.json  federated_partners_12.json  fence_registry.json  figure_extract_ledger_2026_05_17.json  geo_bench_500_queries.json  geo_questions.json  hallucination_guard.yaml  lane_k_glue_etl_ledger_2026_05_17.json  municipality_seed_urls.json  nta_corpus_load_log.jsonl  placeholder_mappings.json  refresh_sources_report.json  registry_status_2026-04-25.jsonl  restore_drill_expected.json  sample_consultant_clients.csv  sample_saved_searches.json  source_freshness_report.json  source_probe_2026_04_26_tier_s.json  textract_bulk_2026_05_17_ledger.json  textract_bulk_2026_05_17_manifest.json  textract_lane_k_phase2_2026_05_17_ledger.json  textract_lane_k_phase2_2026_05_17_manifest.json  tier_x_classification_report.json  tier_x_review_queue.jsonl  wave59_outcome_skeletons.json
docs/: SYSTEM_INDEX.md  agents.md  alerts_guide.md  api-reference.md  audit_trail.md  bench_methodology.md  bench_results_template.md  cache_architecture.md  compare_matrix.csv  confidence_methodology.md  cs_templates.md  dashboard_guide.md  disaster_recovery.md  english_v4_plan.md  error_handling.md  examples.md  exclusions.md  faq.md  geo_eval_query_set_100.md  getting-started.md  go_no_go_gate.md  hallucination_guard_methodology.md  healthcare_v3_cohort_personas.md  healthcare_v3_plan.md  hiring_decision_gate.md  honest_capabilities.md  i18n_style_guide.md  improvement_loop.md  index.md  invariant_runbook.md  launch_announcement_calendar.md  launch_checklist.md  long_term_strategy.md  mcp-tools.md  monitoring.md  observability.md  operator_daily.md  operator_dashboard_walkthrough.md  organic_outreach_templates.md  partner_referral_mechanism.md  (+19 more)
dxt/: README.md  manifest.json
evals/: README.md  gold.yaml  run.py
examples/: .gitignore  README.md  package.json  requirements.txt  tsconfig.json
functions/: [[path]].ts  _body_limit.ts  ab_assign.ts  aeo_redirect.ts  anon_rate_limit_edge.ts  api_proxy.ts  dpa_issue.ts  package-lock.json  package.json  tsconfig.json  webhook_router.ts  webhook_router_v2.ts  x402_handler.ts
loadtest/: README.md  programs_search.js  webhook_stripe.js
monitoring/: README.md  sentry_alert_rules.yml  sentry_dashboard.json  seo_metrics.md  sla_targets.md  sla_targets.yaml  uptime_metrics_endpoint.md
ops/: USER_RUNBOOK.md  USER_RUNBOOK_v4_launch.md  V3_MASTER_CLEANUP_2026_05_11.md  V3_WAVE5_BACKLOG.md  V3_WAVE9_BACKLOG.md
overrides/: main.html
pdf-app/: Dockerfile  fly.toml  main.py  requirements.txt
pypi-jpcite-meta/: README.md  pyproject.toml
reports/: aeo_bench_w17.md  aeo_bench_w18.md  aeo_bench_w19.md  citation_bench_production_w41.json  citation_bench_production_w41.md  geo_bench_500_w20.md  geo_bench_stub_20260511.jsonl  llm_citation_bench_w45.md
scripts/: MANIFEST.md  _build_compare_csv.py  _pref_slugs.py  agent_runtime_bootstrap.py  analyze_telemetry.py  archive_telemetry.sh  backfill_source_urls.py  backfill_source_urls_wave4.py  backup.md  backup.py  backup_manifest.py  bench.py  bench_api.py  bootstrap_db.sh  bootstrap_eval_db.sh  build_artifact_templates_2026_05_17.py  build_legal_reasoning_chain.py  build_mcpb.sh  build_minify.py  build_placeholder_mappings_n9_2026_05_17.py  build_recipe_docs_n8_2026_05_17.py  build_recipes_n8_2026_05_17.py  build_root_indexes.py  check_agent_runtime_contracts.py  check_distribution_manifest_drift.py  check_fence_count.py  check_geo_readiness.py  check_mcp_drift.py  check_openapi_drift.py  check_publish_text.py  check_registry_listings.py  check_sitemap_freshness.py  check_tool_count_consistency.py  competitive_watch.py  compliance_cron.py  cwv_cleanup_legacy_comment.py  cwv_hardening_patch.py  data_quality_audit.py  dedup_programs_wave17.py  delete_old_stripe_webhook.py  (+107 more)
sdk/: .gitignore  README.md
sdk/python/: README.md  pyproject.toml
sdk/python/autonomath/: __init__.py  _shared.py  client.py  client_async.py  exceptions.py  types.py
sdk/python/tests/: test_client.py
site/: .mcp.json  404.html  README.md  _headers  _redirects  _routes.json  about.html  about.html.md  advisors.html  alerts-unsubscribe.html  alerts.html  analytics.js  analytics.src.js  artifact.html  audit-log.html  audit-log.rss  benchmark.html  bookmarklet.html  calculator.html  changelog.html  claude_desktop_config.example.json  compare.html  compare.html.md  confidence.html  critical.css  dashboard.html  (+90 more)
(+28103 files in other folders)
