[project]
name = "autonomath-mcp"
version = "0.4.0"
description = "REST + MCP context-compression layer for Japanese institutional public data. jpcite turns long PDFs, official pages, and search results into compact Evidence Packets with source URLs, fetched timestamps, known gaps, and compatibility/exclusion rules before downstream AI agents draft answers. 3 yen/billable unit metered (3.30 tax-incl), anonymous 3/day per IP free."
license = { text = "MIT" }
authors = [
    { name = "Bookyou株式会社", email = "info@bookyou.net" },
]
readme = "README.md"
keywords = [
    "mcp",
    "mcp-server",
    "anthropic",
    "japan",
    "japanese",
    "subsidy",
    "tax",
    "loan",
    "invoice",
    "regulation",
    "compliance",
    "law",
    "government",
    "legal-tech",
    "evidence",
    "citation",
    "rag",
    "agent-tools",
    "claude",
    "gpt",
    "cursor",
    "gemini",
    "補助金",
    "税制",
    "法令",
    "適格請求書",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    # Upper bounds on security-critical libs prevent surprise breakage from a
    # silent Dependabot major-bump. Widen these caps deliberately when the
    # upstream release notes clear a breaking-change review. Dev-only / tooling
    # pins live under [project.optional-dependencies] and are intentionally
    # left uncapped.
    "fastapi>=0.115,<0.121",             # middleware APIs churn minor-to-minor; widened to <0.121 (2026-05-07) so starlette CVE-2025-62727 fix (>=0.49.1) resolves cleanly
    "uvicorn[standard]>=0.32,<0.40",
    "mcp>=1.2",
    "pydantic>=2.9,<3",                  # v3 is a future rewrite
    "pydantic-settings>=2.6,<3",
    "email-validator>=2.0,<3",
    # Starlette pinned to >=0.49.1 to fix CVE-2025-62727 (FileResponse Range-header
    # quadratic ReDoS, GHSA-7f5h-v6xp-fcq8). fastapi 0.120.x relaxes its starlette
    # cap to allow this; 0.119.x still pinned to <0.49.0 which is the vulnerable line.
    "starlette>=0.49.1,<0.50",
    # python-multipart >=0.0.27 fixes CVE-2026-42561 (multipart header DoS,
    # GHSA-pp6c-gr5w-3c5g) — unbounded header count + size in MultipartParser.
    "python-multipart>=0.0.27,<1",
    "httpx>=0.28,<1.0",
    # Migration 099 — quarterly engagement PDF (`/v1/me/recurring/quarterly/...`).
    # WeasyPrint renders the Jinja2 quarterly template into a PDF on demand.
    # Server-only dep (the MCP / SDK clients never import it). Cached to
    # data/quarterly_pdfs/<api_key_id>_<year>_q<n>.pdf so repeat downloads
    # are read-from-disk, not re-rendered. v62.0+ stable across macOS+Linux.
    "weasyprint>=62.0",
    "stripe>=11.3,<13",                  # stripe-python does yearly major bumps
    "orjson>=3.10,<4",
    "structlog>=24.4",
    "sqlite-utils>=3.38,<4",
    "tenacity>=9.0,<10",
    "sentry-sdk[fastapi]>=2.19,<3",
    # Device-flow credential store (RFC 8628). Used by
    # src/jpintel_mcp/mcp/auth.py to stash the activated api_key in the
    # OS keychain (macOS Keychain / Windows Credential Manager / Linux
    # Secret Service). Falls back to a 0600 file under $XDG_CONFIG_HOME
    # when Secret Service is unavailable — see auth.py for the shim.
    "keyring>=24.0,<26",
    "scipy>=1.14,<2",                    # Beta credible interval (analytics/bayesian.py)
    # bcrypt dual-path API key storage (Wave 16 abuse-defense P1, migration 073).
    # Cost factor 12 (~100ms/attempt). Verifies new bcrypt-tagged keys; legacy
    # HMAC-SHA256 keys fall through. See src/jpintel_mcp/api/deps.py.
    "bcrypt>=4.2,<6",
    # 6-pack export format renderers (?format={xlsx,docx-application,ics,md,
    # csv-freee,csv-mf,csv-yayoi}). All four are pure-Python, MIT/BSD-licensed,
    # zero-syscall surface, and small enough to keep on the prod wheel rather
    # than gating behind an optional [formats] extra. Wired through
    # `src/jpintel_mcp/api/_format_dispatch.py`.
    "openpyxl>=3.1,<4",                  # xlsx writer (write_only mode)
    "python-docx>=1.1,<2",               # 申請書 boilerplate / DOCX cover
    "icalendar>=5.0,<7",                 # RFC 5545 calendar (deadline VEVENT fan-out)
    # PDF text extraction for the prefecture/city walker (added 2026-04-29
    # because 茨城県 / 和歌山県 / 福井県 publish program detail rows as PDFs
    # hosted on the same pref.*.lg.jp domain — those are legitimate primary
    # sources and require pdfplumber to harvest). Pure Python wheel, no system
    # deps. Used by `scripts/walk_pref_subsidy_seeds.py`.
    "pdfplumber>=0.11,<1",
    # HTML parser for the NTA / MOJ / MHLW / MIC / MAFF / court-decision
    # ingest scripts. These run inside the Fly production container via
    # `flyctl ssh ... /opt/venv/bin/python /app/scripts/...`, so bs4 must be
    # in the runtime deps (not just [dev]). 2026-05-07 R8: nta-corpus-
    # incremental-cron crashed nightly with `ModuleNotFoundError: bs4`.
    "beautifulsoup4>=4.12,<5",
    # Wave 18 E2 (2026-05-11): OpenTelemetry distributed tracing for the
    # REST API. Pure stdlib-shaped surface — OTLP HTTP exporter only, no
    # gRPC dependency (keeps the wheel small + sidesteps the protobuf
    # version churn). The instrumentation auto-wraps every FastAPI
    # request handler in a server span; `observability/otel.py` is the
    # two-gate init (env: OTEL_EXPORTER_OTLP_ENDPOINT + package
    # importability). When the endpoint is unset the entire surface
    # short-circuits to no-op so dev / CI runs are not slowed down.
    # ~9 MB wheel footprint combined; smaller than weasyprint / pyarrow.
    # NOT an LLM SDK — this is production telemetry, allowed by the
    # `feedback_no_operator_llm_api` rule (OTLP HTTP is bounded-cost
    # span export, not generative inference).
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
    "build>=1.2",
    "pre-commit>=4.0",
    "duckdb>=1.1",                  # weekly_digest.py + analyze_telemetry.py
    "pyarrow>=18,<25",              # parquet writer for scripts/hf_dataset_export.py
    "huggingface_hub>=0.25,<1",     # HF dataset publish CLI; see docs/_internal/hf_publish_runbook.md
    # beautifulsoup4 lifted into main `dependencies` (production Fly cron uses it).
    "pandas>=2.2",                  # HF/e-Stat export safety tests/scripts
    "rapidfuzz>=3.6,<4",            # tests/test_reconcile_adoption.py fuzzy matcher
    # Wave 36 fallback cron runners call `python -m playwright install`.
    # Keep the Python package in [dev] so pip-installed GitHub Actions
    # workflows do not fail before the browser install step.
    "playwright>=1.48",
]
# Browser-driven end-to-end smoke suite. Separate extras group so the prod
# container build (Dockerfile) never pulls in Playwright's ~200MB browser
# dependency tree. Install locally via `pip install -e ".[e2e]" &&
# playwright install chromium`. Run via `pytest tests/e2e/`.
e2e = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "playwright>=1.48",
    "pytest-playwright>=0.6",
    "httpx>=0.28",
]
# Static site generation (per-program HTML + sitemap). Separate so the prod
# API container never pulls in cutlet's mecab dependency. Install locally via
# `pip install -e ".[site]"`. Run via `python scripts/generate_program_pages.py`.
site = [
    "pykakasi>=2.2",
    "jinja2>=3.1",
]

[project.scripts]
autonomath-api = "jpintel_mcp.api.main:run"
autonomath-mcp = "jpintel_mcp.mcp.server:run"
autonomath-ingest = "jpintel_mcp.ingest.canonical:run"
jpcite-api = "jpintel_mcp.api.main:run"
jpcite-ingest = "jpintel_mcp.ingest.canonical:run"
# Legacy aliases for existing installs (will be removed at v1.0):
jpintel-api = "jpintel_mcp.api.main:run"
jpintel-ingest = "jpintel_mcp.ingest.canonical:run"

[project.urls]
Homepage = "https://jpcite.com"
Documentation = "https://jpcite.com/docs/"
# TODO(org-claim): switch back to github.com/jpcite/autonomath-mcp once the jpcite GitHub org is claimed.
Repository = "https://github.com/shigetosidumeda-cyber/autonomath-mcp"
Issues = "https://github.com/shigetosidumeda-cyber/autonomath-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jpintel_mcp"]

# Explicit sdist include list. Without this, hatchling's sdist builder bundles
# the whole repo (site/ static HTML, research/ PDFs, data/*.db.bak.*, the sibling
# sdk/ trees, etc.), pushing the tarball to ~90MB — close to PyPI's 100MB per-
# file cap and in violation of the project's "never commit DB backups" rule
# (see CLAUDE.md). Keep this list in sync with wheel contents + whatever is
# needed to reproduce a build from the sdist.
#
# Exclude list: hatchling (non-git repo) auto-discovers README.md files and
# pyproject.toml files in subdirectories even with an explicit include list.
# The exclude list below plugs those leaks.
[tool.hatch.build.targets.sdist]
include = [
    "src/jpintel_mcp",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "*.gitignore",
    ".gitignore",
    "docs/",
    "dxt/",
    "examples/",
    "loadtest/",
    "research/",
    "scripts/",
    "sdk/",
    "site/",
    "tests/",
    "data/",
    "overrides/",
    "content/",
    "src/jpintel_mcp/_archive/",
]

[tool.mypy]
# `_archive/` is a frozen capsule of pre-Wave-25 modules kept for forensic
# reference (autonomath_tools_dead_2026-04-25 / embedding_2026-04-25 /
# reasoning_2026-04-25). The dated directory names contain hyphens and digits,
# which mypy rejects as invalid dotted package names — even with `__init__.py`
# present — and the fatal "contains __init__.py but is not a valid Python
# package name" stops the whole walk. Excluding the tree both unblocks the
# remaining checks and signals "do not type-check archived code".
exclude = [
    "^src/jpintel_mcp/_archive/",
]

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = ["src/jpintel_mcp/_archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Body() / Depends() in defaults is canonical idiom — B008 is a false positive there.
"src/jpintel_mcp/api/wave24_endpoints.py" = ["B008"]
"sdk/mf-plugin/proxy_endpoints.py" = ["B008"]
# `format` arg name matches the public MCP tool param contract (output format).
"src/jpintel_mcp/mcp/autonomath_tools/intel_wave31.py" = ["A002"]
# JSON / API surface field names from upstream (courts.go.jp, METI 行政文書) preserve original camelCase.
"scripts/ingest/ingest_court_decisions_lower.py" = ["N803"]
"scripts/ingest/ingest_enforcement_meti.py" = ["N802"]
"scripts/ops/verify_migration_targets.py" = ["N806"]
# numeric counters in benchmarks / ETL inner loops — enumerate() rewrites are noisier than the original.
"benchmarks/jcrb_v1/run_token_benchmark.py" = ["SIM113"]
"scripts/etl/build_entity_density_score.py" = ["SIM113"]
"scripts/etl/build_entity_pagerank.py" = ["SIM113"]
# multi-clause if/else carries comments and divergent paths — ternary collapses readability.
"scripts/etl/build_temporal_correlation.py" = ["SIM108"]
"scripts/ingest/ingest_court_decisions_courts_jp.py" = ["SIM108"]
"scripts/ingest/ingest_enforcement_maff.py" = ["SIM108"]
# nested `with` patches are intentional — combining changes mock teardown order.
"sdk/freee-plugin/tests/test_freee_glue.py" = ["SIM117"]
"tests/test_industry_journal_mention.py" = ["SIM117"]
# Test-only patterns: GZipMiddleware alias, lambda-in-loop fake_results, sys.path manipulation before imports.
"tests/test_gzip_middleware.py" = ["N814"]
"tests/test_post_deploy_smoke.py" = ["B023"]
"tests/smoke/smoke_pre_launch.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: runtime/import-heavy checks that are not part of the fastest local loop",
]
